snippet for adding multiple markers

--- a/map-component.html
+++ b/map-component.html
@@ -6,4 +6,12 @@
         (mapReady)="initMap($event)"
         (mapClick)="handleMapClick($event)">
 
+
+        <agm-marker *ngFor="let m of markers"
+                    [latitude]="m?.lat"
+                    [longitude]="m?.lng"
+                    (markerClick)="handleMarkerClick(m)">
+                    
+        </agm-marker>
+
 </agm-map>
