snippet : info window pop shows dynamic content on marker click

--- a/map-component.html
+++ b/map-component.html
@@ -21,6 +21,7 @@
 
                     <agm-info-window (infoWindowClose)="handleInfoWindowClose()">
                       <p><i class="fa fa-map-marker"> </i> You are here : <small>{{m.address}}</small></p>
+                      <p>{{popupContent}}</p>
                     </agm-info-window>
 
         </agm-marker>
